# loghatnameh

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-0088f4617ea0ca91a79735fd2428ad146d6f39230b726988c8051197e3a5b66a.json  query-129d992a698ff17e2bba8928c918fc9b8166c7ef044a82267bd98a0c32d79bc0.json  query-20b22144141c64927b554150c158cbf44ae7c2ac8553b79dae9f573f4a6c9640.json  query-417d21c364b2adeb0995651e7d358f570790d1eeb0fc7dcbfc8abf9b92f66ab6.json  query-4f3d3f98cc2b8f338d3643fa7d5b3315c7854c738118b9986a3dbdad766c07ed.json  query-6e991481b094b1c2aeec6df703fb4d7133324fbf75e6fca7db932d9ee39e775f.json  query-856d5629021e0ed7baedcfa7154ea5ba8bfd653341ab1cd79f3b7ae9997da7b2.json  query-8e1798df60f2c8261c071506dd98334133be733ac7c0ec1bf9897464907bc663.json  query-97dabc8d5c69dccb3db440adc476a2c3f9775f348cb8554690b9bc63c839ad1f.json  query-c4bb9743f1100ef41c4bba9508e88bb4a1d78e0903a31cbbc18aa54d21d1e8f5.json  query-dd228b20bf34dd79e2c5e7bc3804186afda5e8e9980c82ff9966d705ba89c169.json  query-f1696c3ebb38b44b649378607c5d1e3e6913e3a673acaa0ddc5732747d872bf3.json
css/: index.css
migrations/: 1__create_db.sql  2__create_query_log.sql  3__add_col_query_type.sql  4__add_col_transcription.sql  5__modify_word_lang_not_null.sql  6__add_col_pos.sql
src/: db.rs  handlers.rs  i18n.rs  main.rs
static/: index.html
templates/: error.html  hello.html  index.html  item.html  no_results.html  results.html  word-add.html  word-details.html
