[package]
name = "loghatnameh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "~0.7.1" }
dotenv = "0.15.0"
env_logger = "0.11.1"
futures = "0.3"
hyper = { version = "1.0.0", features = ["full"] }
log = "0.4.20"
log4rs = "1.2.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
